--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 24 15:29:27 NOVT 2024
-sdk.dir=/Users/tleub/Library/Android/sdk
+#Fri May 24 23:19:20 NOVT 2024
+sdk.dir=C\:\\Users\\hopm1\\AppData\\Local\\Android\\Sdk
